And there's too many stats to list them all.. There's at least 50 traits. plus 25 conversion and transfers, so i assume you don't want to scroll those!
* added commands /givestat /removestat so you can add custom stats with custom identifiers, this way you can have an achievement like "complete x dungeon" in your mod and give "x_dun_completed" stat to a player.
* bomb spells now have gravity and higher explosion radius, they also detonate faster
* there's now base spell damage for players, a bit higher early on so low lvl spells are a bit more effective
* currencies now show tier and rarity on their tooltips
* added config option for starter items
* stations now have shift click functionality! This was actually really hard to do.
* added more really rare currencies
* should fix mobs not spawning in maps sometimes
* maps now have structures! For now there's not much but there's small decorations, treasures and 2 bigger structures, a tower house and a floating island which is more rare. If nothing goes wrong i should be adding more and more world gen to maps, hopefully making it more interesting.
* the structures in maps automatically transform into the biome of the map they're in. So the nether biome the structures are made of nether bricks while in the swamp they're made of prismarine. You'll see.
* maps are now night only and there's no special mob spawning rules, so it's same as vanilla for now. ( i want to add special events later on but that idea is still wip)
* mobs are no longer immune to sunlight as maps are now always night. (there's mods that configure this if u want to keep the sunlight resistance)
* nerfed bonus salvage chance for auto salvage bags
* you can't die in maps anymore. Deaths in maps are prevented and you're teleported out with a time penalty. in perma death maps it's game over for that map though.




