@@ -19,7 +19,7 @@ version_minecraft=1.14.3
 version_mcp=20190627-1.14.3
 
 # Mod Dependencies
-version_curios=1.13.2-0.11
+version_curios=FORGE-1.14.3-0.13
 version_autosave=1.14.2-1.0.1
 
 # Curse
