@@ -1,10 +1,23 @@
 package com.mmorpg_libraries.curios;
 
+import com.mmorpg_libraries.curios.interfaces.ICuriosType;
+import net.minecraft.item.ItemStack;
+import net.minecraft.util.Direction;
+import net.minecraftforge.common.capabilities.Capability;
+import net.minecraftforge.common.capabilities.ICapabilityProvider;
+import net.minecraftforge.common.util.LazyOptional;
+import net.minecraftforge.event.AttachCapabilitiesEvent;
+import net.minecraftforge.eventbus.api.SubscribeEvent;
 import net.minecraftforge.fml.common.Mod;
+import top.theillusivec4.curios.api.capability.CuriosCapability;
+import top.theillusivec4.curios.api.capability.ICurio;
+
+import javax.annotation.Nonnull;
+import javax.annotation.Nullable;
 
 @Mod.EventBusSubscriber
 public class AddCurioCapability {
-/*
+
     @SubscribeEvent
     public static void attachCapabilities(AttachCapabilitiesEvent<ItemStack> evt) {
 
@@ -35,6 +48,4 @@ public class AddCurioCapability {
         }
     }
 
-
- */
 }
