@@ -2,6 +2,9 @@ package com.mmorpg_libraries.curios;
 
 import net.minecraft.entity.player.PlayerEntity;
 import net.minecraft.item.ItemStack;
+import top.theillusivec4.curios.api.CuriosAPI;
+import top.theillusivec4.curios.api.capability.ICurioItemHandler;
+import top.theillusivec4.curios.api.inventory.CurioStackHandler;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -11,7 +14,7 @@ public class MyCurioUtils {
     public static List<ItemStack> getAllSlots(PlayerEntity player) {
 
         List<ItemStack> list = new ArrayList<>();
-/*
+
         ICurioItemHandler handler = CuriosAPI.getCuriosHandler(player).orElse(null);
 
         if (handler != null) {
@@ -31,8 +34,6 @@ public class MyCurioUtils {
 
         }
 
-
- */
         return list;
 
     }
@@ -40,7 +41,6 @@ public class MyCurioUtils {
     // defaults to first slot
     public static ItemStack getSlot(PlayerEntity player, CurioSlots slot) {
 
-        /*
         ICurioItemHandler handler = CuriosAPI.getCuriosHandler(player).orElse(null);
 
         if (handler != null) {
@@ -48,8 +48,6 @@ public class MyCurioUtils {
             return handler.getStackInSlot(slot.name, 0);
 
         }
-
-         */
 
         return ItemStack.EMPTY;
 
