@@ -23,11 +23,10 @@ Turn Minecraft Into a hack and slash looter!
     versionRange="[1.14.3]"
     ordering="NONE"
 	side="BOTH"
-
-#[[dependencies.mmorpg]]
-#    modId="curios" 
-#    mandatory=true 
-#    versionRange="[0.10,)" 
-#    ordering="NONE"
-#    side="BOTH"
+[[dependencies.mmorpg]]
+    modId="curios" 
+    mandatory=true 
+    versionRange="[0,)" 
+    ordering="NONE"
+    side="BOTH"
 	
